# crc24-openpgp-fast

./: Cargo.toml  LICENSE  README.md
benches/: fast_vs_fallback.rs
src/: lib.rs
