[package]
name = "crc24-openpgp-fast"
description = "CRC24 OpenPGP calculator with speedups for x86-64 CPUs with SIMD"
license = "MIT"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc24 = "0.1.6"

[dev-dependencies]
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "fast_vs_fallback"
harness = false
